--- a/index.html
+++ b/index.html
@@ -3,74 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>htmlcss-struttura-discord</title>
-
-    <link rel="stylesheet" href="../htmlcss-struttura-discord/css/style.css">
+    <title>htmlcss-discord</title>
+    <!-- intestazione -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../htmlcss-discord/css/style.css">
 </head>
 <body>
 
     <!-- intestazione -->
     <header>
-        <nav class="flex-conteiner-header">
-            <div class="logo">Logo</div>
-            <div class="link">Link Link Link</div>
-            <div class="login">Login</div>
+        <nav class="navbar flex conteiner">
+            <div class="logo"><img src="img/logo.svg" alt=""></div>
+            <div class="link"><a href="pag1">Scarica</a>
+                <a href="pag2">Perche discord</a>
+                <a href="pag3">Nitro</a>
+                <a href="pag4">Assistenza</a>
+                <a href="pag5">Sicurezzza</a>
+            </div>
+            <div class="login"><button class="badgeBTN">Login</button></div>
                 </nav>
             </div>    
         </nav>
+        <section class="spotlight flex">
+            <div class="box-centrale">
+                <h1>Il tuo posto per parlare</h1>
+                <p class="text-spotlight">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica
+                    monolale, o semplicemente al un piccolo gruppo ol amici ene vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <div class="button">
+                        <button class="badge-scarica"><i class="fa-solid fa-arrow-down"></i>Scarica per Mac</button>
+                        <button class="badge-apri">Apri discord nella tua pagina</button>
+                    </div>
+            </div>
+        </section>
     </header>
 
-<!-- corpo centrale con sezioni seoarate e sfondi alternati-->
-    <main>
-            <!-- box sofnd blu -->
-        <section class="flex-conteiner-blue">
-            <div class="box-centrale"></div>
-        </section>
-
-            <!-- sfondo bianco/trasparente -->
-        <section class="flex-conteiner">
-            <div class="box-leftBG"></div>
-            <div class="box-rightSM"></div>
-        </section>
-
-            <!-- sfondo grigiio -->
-        <section class="flex-conteiner-grey">
-            <div class="box-leftSM"></div>
-            <div class="box-rightBG"></div>
-        </section>
-
-            <!-- sfondo bianco/trasparente -->
-        <section class="flex-conteiner">
-            <div class="box-leftBG"></div>
-            <div class="box-rightSM"></div>
-        </section>
-    
-           <!-- parte finale -->
-        <section class="flex-conteiner-grey">
-            <div class="box"></div>
-            </section>
-    </main>
-
-    <!-- piè di pagina divi in due parti-->
-    <footer>
-        <section class="flex-conteiner-black">
-            <div class="box-40"></div>
-            <div class="box-20"></div>
-            <div class="box-20"></div>
-            <div class="box-20"></div>
-            <div class="box-20"></div>
-        </section>
-
-        <section class="flex-conteiner-DW">
-            <div class="footer-box">
-                <div class="box-grey-left">logo</div>
-                <div class="box-grey-right">logo</div>
-            </div>
-
-
-        </section>
-
-    </footer>
 
 
 </body>
